--- a/app/src/main/res/layout-v26/explore_course_recycler_card.xml
+++ b/app/src/main/res/layout-v26/explore_course_recycler_card.xml
@@ -7,8 +7,8 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="5dp"
     app:cardElevation="4dp"
-    android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="2dp"
+    android:layout_marginVertical="4dp"
+    android:layout_marginHorizontal="8dp"
     android:id="@+id/cvCourseCard"
     android:animateLayoutChanges="true">
     <RelativeLayout
@@ -37,7 +37,8 @@
                 android:layout_height="match_parent"
                 android:layout_toEndOf="@id/cv"
                 android:id="@+id/divider"
-                android:background="@color/colorGrey"/>
+                android:background="@color/colorGrey"
+                android:layout_marginVertical="4dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
