--- a/app/src/main/res/layout/activity_user_data_setup.xml
+++ b/app/src/main/res/layout/activity_user_data_setup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UserDataSetupActivity"
-    android:background="@color/colorWhite">
+    android:background="@color/colorPrimaryLight">
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
