--- a/app/src/main/res/layout/payment_log_recycler_card.xml
+++ b/app/src/main/res/layout/payment_log_recycler_card.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="10dp"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="2dp"
     app:cardElevation="4dp"
     app:cardCornerRadius="2dp">
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
