--- a/app/src/main/res/layout/explore_course_recycler_card.xml
+++ b/app/src/main/res/layout/explore_course_recycler_card.xml
@@ -29,7 +29,7 @@
                     android:layout_height="84dp"
                     android:scaleType="centerCrop"
                     tools:ignore="ContentDescription"
-                    android:src="@drawable/background"/>
+                    android:src="@color/colorPrimary"/>
             </androidx.cardview.widget.CardView>
             <View
                 android:layout_width="1dp"
@@ -50,7 +50,7 @@
                     android:id="@+id/courseName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/course_name"
+                    android:text="@string/please_wait"
                     android:autoSizeTextType="uniform"
                     android:maxLines="1"
                     android:textSize="20sp"
@@ -64,7 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_weight="70"
                     android:layout_height="match_parent"
-                    android:text="3.7/5"
+                    android:text=""
                     android:autoSizeTextType="uniform"
                     android:autoSizeMaxTextSize="14sp"
                     android:maxLines="1"
@@ -88,7 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_weight="15"
                     android:layout_height="match_parent"
-                    android:text="@string/free"
+                    android:text="@string/please_wait"
                     android:textSize="@dimen/text_margin"
                     android:textStyle="italic"
                     android:typeface="serif"
@@ -120,7 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="@string/app_name"
+                android:text="@string/please_wait"
                 android:textSize="@dimen/text_margin"
                 android:textStyle="italic"
                 android:typeface="serif"
@@ -130,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="@string/offline"
+                android:text="@string/please_wait"
                 android:textSize="@dimen/text_margin"
                 android:textStyle="italic"
                 android:typeface="serif"
@@ -140,7 +140,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="About 10 kilometers from your location"
+                android:text="@string/estimating_course_location_please_wait"
                 android:textSize="@dimen/text_margin"
                 android:textStyle="italic"
                 android:typeface="serif"
