--- a/app/src/main/res/layout/fragment_user_data_setup1.xml
+++ b/app/src/main/res/layout/fragment_user_data_setup1.xml
@@ -71,6 +71,7 @@
             android:imeOptions="actionDone"
             android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout> -->
+    <!--
 
     <EditText
         android:layout_width="match_parent"
@@ -112,7 +113,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textEnterInterests"
         android:layout_margin="@dimen/text_margin"
-        android:id="@+id/groupInterests"/>
+        android:id="@+id/groupInterests"/> -->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textSetupTitle2"
+        android:padding="10dp"
+        android:id="@+id/gridInterests"/>
 
 
 
