Near me sorted perfectly

--- a/app/src/main/res/layout/fragment_explore0.xml
+++ b/app/src/main/res/layout/fragment_explore0.xml
@@ -6,6 +6,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ExploreFragment0">
 
+    <ProgressBar
+        android:id="@+id/loadingExplore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="6dp"
+        android:visibility="visible"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"/>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
