--- a/app/src/main/res/layout/activity_active_course_main.xml
+++ b/app/src/main/res/layout/activity_active_course_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/colorWhite"
+    android:background="@color/colorPrimaryLight"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/AppTheme">
     <ProgressBar
