--- a/app/src/main/res/layout/class_card.xml
+++ b/app/src/main/res/layout/class_card.xml
@@ -1,68 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:orientation="horizontal"
-    android:padding="10dp">
-    <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="December"
-            android:textAllCaps="true"
-            android:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:typeface="sans"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:id="@+id/month"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:text="14"
-            android:textAllCaps="true"
-            android:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:typeface="sans"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:id="@+id/date"/>
-    </LinearLayout>
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="8dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:id="@+id/card">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:padding="10dp">
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="December"
+                android:textAllCaps="true"
+                android:autoSizeTextType="uniform"
+                android:gravity="center"
+                android:typeface="sans"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:id="@+id/month"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="4"
+                android:text="14"
+                android:textAllCaps="true"
+                android:autoSizeTextType="uniform"
+                android:gravity="center"
+                android:typeface="sans"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:id="@+id/date"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="Introduction to data scinece!"
-            android:textAllCaps="true"
-            android:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:typeface="sans"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:id="@+id/classTitle"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:text="09:50 AM"
-            android:textAllCaps="true"
-            android:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:typeface="sans"
-            android:textColor="@color/colorWhite"
-            android:background="@color/colorPrimary"
-            android:textStyle="bold"
-            android:id="@+id/time"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="Introduction to data scinece!"
+                android:textAllCaps="true"
+                android:autoSizeTextType="uniform"
+                android:gravity="center"
+                android:typeface="sans"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:id="@+id/classTitle"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3"
+                android:text="09:50 AM"
+                android:textAllCaps="true"
+                android:autoSizeTextType="uniform"
+                android:gravity="center"
+                android:typeface="sans"
+                android:textColor="@color/colorWhite"
+                android:background="@color/colorPrimary"
+                android:textStyle="bold"
+                android:id="@+id/time"/>
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
