--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -1,15 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
         android:src="@drawable/default_person_image"
-        android:layout_centerInParent="true"
-        android:id="@+id/profilePhotoHeader"/>
+        android:layout_centerHorizontal="true"
+        android:id="@+id/profilePhotoHeader"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="5dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/profilePhotoHeader"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="3dp"
+        android:weightSum="100"
+        android:id="@+id/linearLayout1">
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/email_id"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/text_margin"
+            android:layout_weight="10"
+            android:layout_gravity="center"
+            android:padding="3dp"
+            android:gravity="center_vertical"/>
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="90"
+            android:background="@color/transparent"
+            android:src="@drawable/icon_down"
+            android:layout_gravity="center"
+            tools:ignore="ContentDescription"
+            android:clickable="true"
+            android:focusable="true"
+            android:id="@+id/btn_expand_collapse"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/linearLayout1"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="3dp"
+        android:weightSum="100"
+        android:id="@+id/more"
+        android:visibility="gone">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/username"
+            android:textColor="@color/colorLiteGrey"
+            android:textSize="@dimen/text_margin"
+            android:layout_weight="10"
+            android:layout_gravity="center"
+            android:padding="3dp"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/phone"
+            android:textColor="@color/colorLiteGrey"
+            android:textSize="@dimen/text_margin"
+            android:layout_weight="10"
+            android:layout_gravity="center"
+            android:padding="3dp"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:id="@+id/btn_edit_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Edit Profile"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_weight="10"
+            android:layout_gravity="center"
+            android:padding="8dp"
+            android:drawablePadding="5dp"
+            app:drawableStartCompat="@drawable/edit_icon"
+            app:drawableTint="@color/colorAccent"
+            android:gravity="center_vertical"
+            android:clickable="true"
+            android:focusable="true"/>
+    </LinearLayout>
 </RelativeLayout>
