--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -82,7 +82,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Due in next seven days"
+                    android:text="Amount due"
                     android:textColor="@color/colorBlack"
                     android:textSize="14sp"
                     android:gravity="center"
