--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -477,7 +477,7 @@
         android:layout_marginBottom="4dp"
         android:layout_alignParentBottom="true"
         android:progress="50"
-        android:progressTint="@color/colorRed"
+        android:progressTint="@color/colorPrimary"
         android:progressBackgroundTint="@color/colorGrey"
         android:id="@+id/add_course_progress"
         android:scaleY="2"/>
