--- a/app/src/main/res/layout/activity_course_register.xml
+++ b/app/src/main/res/layout/activity_course_register.xml
@@ -154,24 +154,47 @@
 
             </androidx.cardview.widget.CardView>
 
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/courseCard"
-                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:textStyle="bold"
-                android:textSize="24sp"
-                android:text="Fee - $100/-"
+                android:textSize="22sp"
+                android:text="Total Price - $105/- "
                 android:textColor="@color/colorPrimaryDark"
                 android:padding="3dp"
                 android:id="@+id/textFees"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textFees"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:text="\t\t Tution Fee - $100/- "
+                android:textColor="@color/colorPrimary"
+                android:padding="3dp"
+                android:id="@+id/textFeesTution"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textFeesTution"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:text="\t\t Convenience Fee - $5/-"
+                android:textColor="@color/colorPrimary"
+                android:padding="3dp"
+                android:id="@+id/textFeesConvenience"/>
 
             <TextView
                 android:id="@+id/textRefundPolicy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin"
-                android:layout_below="@id/textFees"
+                android:layout_below="@id/textFeesConvenience"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/text_margin"
                 android:typeface="serif"
