--- a/app/src/main/res/layout/contact_us.xml
+++ b/app/src/main/res/layout/contact_us.xml
@@ -29,7 +29,7 @@
                 android:textSize="14sp"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/colorPrimary"
-                android:text="upsilon@gmail.com"/>
+                android:text="upsilon175@gmail.com"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
